--- a/docs/xaringan-themer.css
+++ b/docs/xaringan-themer.css
@@ -15,21 +15,21 @@
  *    - xaringan wiki: https://github.com/yihui/xaringan/wiki
  *    - remarkjs wiki: https://github.com/gnab/remark/wiki
  *
- *  Version: 0.4.0.9000
+ *  Version: 0.4.2
  *
  * ------------------------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap);
 
 
 :root {
   /* Fonts */
-  --text-font-family: 'Noto Sans';
+  --text-font-family: 'Open Sans';
   --text-font-is-google: 1;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: Cabin;
+  --header-font-family: 'Open Sans';
   --header-font-is-google: 1;
   --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
@@ -43,24 +43,56 @@
   --header-h3-font-size: 1.75rem;
 
   /* Colors */
-  --text-color: #000000;
-  --header-color: #1381B0;
-  --background-color: #FFFFFF;
-  --link-color: #1381B0;
-  --text-bold-color: #1381B0;
+  --text-color: #000080;
+  --header-color: #4682B4;
+  --background-color: #FFFFF0;
+  --link-color: #1E90FF;
+  --text-bold-color: #8B008B;
   --code-highlight-color: rgba(255,255,0,0.5);
-  --inverse-text-color: #000000;
-  --inverse-background-color: #FF961C;
-  --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #1381B0;
-  --title-slide-background-color: #1381B0;
-  --title-slide-text-color: #000000;
-  --header-background-color: #1381B0;
-  --header-background-text-color: #FFFFFF;
-  --primary: #1381B0;
-  --secondary: #FF961C;
-  --white: #FFFFFF;
-  --black: #000000;
+  --inverse-text-color: #000080;
+  --inverse-background-color: #778899;
+  --inverse-header-color: #000080;
+  --inverse-link-color: #1E90FF;
+  --title-slide-background-color: #4682B4;
+  --title-slide-text-color: #000080;
+  --header-background-color: #4682B4;
+  --header-background-text-color: #FFFFF0;
+  --primary: #4682B4;
+  --secondary: #778899;
+  --white: #FFFFF0;
+  --black: #000080;
+  --SU_Orange1: #F76900;
+  --SU_Orange2: #FF8E00;
+  --SU_Red_Orange: #FF431B;
+  --SU_Blue1: #000E54;
+  --SU_Blue2: #203299;
+  --SU_Light_Blue: #2B72D7;
+  --SU_White: #FFFFFF;
+  --SU_Light_Gray: #ADB3B8;
+  --SU_Medium_Gray: #707780;
+  --SU_Black: #000000;
+  --steel_blue: #4682B4;
+  --corn_flower_blue: #6495ED;
+  --deep_sky_blue: #00BFFF;
+  --dark_magenta: #8B008B;
+  --medium_orchid: #BA55D3;
+  --lime_green: #32CD32;
+  --light_sea_green: #20B2AA;
+  --chartreuse: #7FFF00;
+  --orange_red: #FF4500;
+  --white_smoke: #F5F5F5;
+  --dark_cyan: #008B8B;
+  --light_steel_blue: #B0C4DE;
+  --indigo: #4B0082;
+  --ivory: #FFFFF0;
+  --light_slate_grey: #778899;
+  --linen: #FAF0E6;
+  --steel_blue: #4682B4;
+  --blue_violet: #8A2BE2;
+  --dodger_blue: #1E90FF;
+  --light_blue: #ADD8E6;
+  --azure: #F0FFFF;
+  --lavender: #E6E6FA;
 }
 
 html {
@@ -101,10 +133,12 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #1381B0;
+  color: #4B0082;
+  background-color: #E6E6FA;
+  padding: 2px;
 }
 .remark-slide-number {
-  color: #1381B0;
+  color: #4682B4;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -152,10 +186,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #1381B099;
+  color: #4682B499;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #1381B0;
+  color: #4682B4;
 }
 .right-column {
   width: 75%;
@@ -177,7 +211,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #FF961C80;
+  border-left: solid 5px #77889980;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -191,8 +225,10 @@ blockquote {
 th, td {
   padding: 5px;
 }
-.remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #FFEAD1;
+.remark-slide table:not(.table-unshaded) thead,
+.remark-slide table:not(.table-unshaded) tfoot,
+.remark-slide table:not(.table-unshaded) tr:nth-child(even) {
+  background: #E3E7EA;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -202,7 +238,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #FFEAD1;
+  background-color: #E3E7EA;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -295,5 +331,197 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 }
 .bg-black {
   background-color: var(--black);
+}
+.SU_Orange1 {
+  color: var(--SU_Orange1);
+}
+.bg-SU_Orange1 {
+  background-color: var(--SU_Orange1);
+}
+.SU_Orange2 {
+  color: var(--SU_Orange2);
+}
+.bg-SU_Orange2 {
+  background-color: var(--SU_Orange2);
+}
+.SU_Red_Orange {
+  color: var(--SU_Red_Orange);
+}
+.bg-SU_Red_Orange {
+  background-color: var(--SU_Red_Orange);
+}
+.SU_Blue1 {
+  color: var(--SU_Blue1);
+}
+.bg-SU_Blue1 {
+  background-color: var(--SU_Blue1);
+}
+.SU_Blue2 {
+  color: var(--SU_Blue2);
+}
+.bg-SU_Blue2 {
+  background-color: var(--SU_Blue2);
+}
+.SU_Light_Blue {
+  color: var(--SU_Light_Blue);
+}
+.bg-SU_Light_Blue {
+  background-color: var(--SU_Light_Blue);
+}
+.SU_White {
+  color: var(--SU_White);
+}
+.bg-SU_White {
+  background-color: var(--SU_White);
+}
+.SU_Light_Gray {
+  color: var(--SU_Light_Gray);
+}
+.bg-SU_Light_Gray {
+  background-color: var(--SU_Light_Gray);
+}
+.SU_Medium_Gray {
+  color: var(--SU_Medium_Gray);
+}
+.bg-SU_Medium_Gray {
+  background-color: var(--SU_Medium_Gray);
+}
+.SU_Black {
+  color: var(--SU_Black);
+}
+.bg-SU_Black {
+  background-color: var(--SU_Black);
+}
+.steel_blue {
+  color: var(--steel_blue);
+}
+.bg-steel_blue {
+  background-color: var(--steel_blue);
+}
+.corn_flower_blue {
+  color: var(--corn_flower_blue);
+}
+.bg-corn_flower_blue {
+  background-color: var(--corn_flower_blue);
+}
+.deep_sky_blue {
+  color: var(--deep_sky_blue);
+}
+.bg-deep_sky_blue {
+  background-color: var(--deep_sky_blue);
+}
+.dark_magenta {
+  color: var(--dark_magenta);
+}
+.bg-dark_magenta {
+  background-color: var(--dark_magenta);
+}
+.medium_orchid {
+  color: var(--medium_orchid);
+}
+.bg-medium_orchid {
+  background-color: var(--medium_orchid);
+}
+.lime_green {
+  color: var(--lime_green);
+}
+.bg-lime_green {
+  background-color: var(--lime_green);
+}
+.light_sea_green {
+  color: var(--light_sea_green);
+}
+.bg-light_sea_green {
+  background-color: var(--light_sea_green);
+}
+.chartreuse {
+  color: var(--chartreuse);
+}
+.bg-chartreuse {
+  background-color: var(--chartreuse);
+}
+.orange_red {
+  color: var(--orange_red);
+}
+.bg-orange_red {
+  background-color: var(--orange_red);
+}
+.white_smoke {
+  color: var(--white_smoke);
+}
+.bg-white_smoke {
+  background-color: var(--white_smoke);
+}
+.dark_cyan {
+  color: var(--dark_cyan);
+}
+.bg-dark_cyan {
+  background-color: var(--dark_cyan);
+}
+.light_steel_blue {
+  color: var(--light_steel_blue);
+}
+.bg-light_steel_blue {
+  background-color: var(--light_steel_blue);
+}
+.indigo {
+  color: var(--indigo);
+}
+.bg-indigo {
+  background-color: var(--indigo);
+}
+.ivory {
+  color: var(--ivory);
+}
+.bg-ivory {
+  background-color: var(--ivory);
+}
+.light_slate_grey {
+  color: var(--light_slate_grey);
+}
+.bg-light_slate_grey {
+  background-color: var(--light_slate_grey);
+}
+.linen {
+  color: var(--linen);
+}
+.bg-linen {
+  background-color: var(--linen);
+}
+.steel_blue {
+  color: var(--steel_blue);
+}
+.bg-steel_blue {
+  background-color: var(--steel_blue);
+}
+.blue_violet {
+  color: var(--blue_violet);
+}
+.bg-blue_violet {
+  background-color: var(--blue_violet);
+}
+.dodger_blue {
+  color: var(--dodger_blue);
+}
+.bg-dodger_blue {
+  background-color: var(--dodger_blue);
+}
+.light_blue {
+  color: var(--light_blue);
+}
+.bg-light_blue {
+  background-color: var(--light_blue);
+}
+.azure {
+  color: var(--azure);
+}
+.bg-azure {
+  background-color: var(--azure);
+}
+.lavender {
+  color: var(--lavender);
+}
+.bg-lavender {
+  background-color: var(--lavender);
 }
 
